# adventofcode2024

./: .gitignore  Cargo.toml  README.md
src/day01/: main.rs
src/day02/: main.rs
src/day03/: main.rs
src/day04/: main.rs
src/day05/: main.rs  main_part1.rs
src/day06/: main.rs
src/day07/: main.rs
src/day08/: main.rs
src/day09/: main.rs
src/day10/: main.rs
src/day11/: main.rs
src/day12/: main.rs
src/day13/: main.rs
src/day14/: main.rs
src/day15/: main.rs
src/day16/: main.rs
src/day17/: main.rs
src/day18/: main.rs
src/day19/: main.rs
src/day20/: main.rs
src/day21/: main.rs  mainp1.rs
src/day22/: main.rs
src/day23/: main.rs
src/day24/: main.rs
src/day25/: main.rs
src/template/: main.rs
