[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1.11.1"

[[bin]]
name = "template"
path = "src/template/main.rs"

[[bin]]
name = "day01"
path = "src/day01/main.rs"

[[bin]]
name = "day02"
path = "src/day02/main.rs"

[[bin]]
name = "day03"
path = "src/day03/main.rs"

[[bin]]
name = "day04"
path = "src/day04/main.rs"
